# depup

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  STATUS.md  action.yml  release.sh  release.toml
.github/workflows/: docs.yml  release.yml
action-scripts/: build-pr-body.sh  create-prs.sh  format-report.sh  setup-pm.sh
docs/: book.toml
docs/src/: SUMMARY.md  installation.md  introduction.md
docs/src/development/: how-it-works.md
docs/src/ecosystems/: maven.md  npm.md
docs/src/github-action/: categories.md  examples.md  inputs-outputs.md  overview.md  setup.md
docs/src/reference/: exit-codes.md  filtering.md  json-mode.md  version-filtering.md
docs/src/usage/: audit.md  check.md  completions.md  update.md
docs/superpowers/plans/: 2026-06-14-action-first-subcommands.md  2026-06-14-ecosystem-field.md  2026-06-15-update-subcommand.md  2026-06-23-action-auto-pm-setup.md
docs/superpowers/specs/: 2026-06-18-cicd-auto-pr-design.md
src/: app.rs  args.rs  constants.rs  dependency.rs  discovery.rs  error.rs  filter.rs  json.rs  main.rs  output.rs  pom.rs  progress.rs  registry.rs  sbom.rs  version.rs
src/command/: audit.rs  check.rs  completions.rs  mod.rs  pipeline.rs  sbom.rs  update.rs
src/command/audit/: mod.rs  osv.rs
src/dependency/: audit.rs  check.rs  mod.rs  update.rs
src/filter/: glob.rs  mod.rs
src/maven/: checker.rs  discovery.rs  maven_central.rs  mod.rs  node.rs  npm.rs  pm_versions.rs  pom.rs  pom_writer.rs  registry.rs  resolver.rs  tool.rs  updater.rs
src/maven/pom_writer/: inline.rs  mod.rs  properties.rs
src/model/: audit.rs  check.rs  mod.rs  update.rs
src/npm/: checker.rs  discovery.rs  mod.rs  pm_bun.rs  pm_npm.rs  pm_pnpm.rs  pm_version_check.rs  pm_yarn.rs  resolver.rs  updater.rs
src/output/: format.rs  json.rs  line.rs  mod.rs  summary.rs  symbols.rs
src/pnpm/: discovery.rs  mod.rs
src/registry/: maven.rs  mod.rs  node.rs  npm.rs
tests/: cli_test.rs  discovery_test.rs
tests/fixtures/child-properties/: pom.xml
tests/fixtures/cross-pom-property/: pom.xml
tests/fixtures/custom-repo/: pom.xml
tests/fixtures/multi-module/: pom.xml
tests/fixtures/npm-simple/: package-lock.json  package.json
tests/fixtures/plain-versions/: pom.xml
tests/fixtures/profile-modules/: pom.xml
tests/fixtures/update-test/: pom.xml
(+4 files in other folders)
