[package]
name = "depup"
version = "0.1.0"
edition = "2024"
description = "Check dependency versions across Maven and pnpm ecosystems"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["cargo"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
console = "0.16"
indicatif = "0.18"
quick-xml = "0.37"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
