[package]
name = "depup-cli"
version = "1.1.4"
edition = "2024"
description = "Check dependency versions across Maven and npm ecosystems"
license = "Apache-2.0"
repository = "https://github.com/hpehl/depup"
homepage = "https://github.com/hpehl/depup"
authors = ["Harald Pehl <harald.pehl@gmail.com>"]
rust-version = "1.85"
readme = "README.md"
keywords = ["dependency", "version", "maven", "npm", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "depup"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["cargo"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
console = "0.16"
indicatif = "0.18"
quick-xml = "0.37"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
